<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#75ffffff"
        tools:context="com.example.android.cricketscoreapp.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cricketButtonPanel"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/team_a"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:textColor="#349637"
                    android:layout_marginTop="16dp"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/score_a_team"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/score_a"
                        android:textSize="44sp"
                        android:fontFamily="cursive"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dash"
                        android:textSize="44sp"
                        android:fontFamily="cursive"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/wicket_a_team"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wicket_a"
                        android:textSize="44sp"
                        android:fontFamily="cursive"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/six"
                    android:textSize="22sp"
                    android:paddingBottom="8dp"
                    android:fontFamily="monospace"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addSixForTeamA"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/four"
                    android:textSize="22sp"
                    android:paddingBottom="8dp"
                    android:fontFamily="monospace"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addFourForTeamA"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/run"
                    android:textSize="22sp"
                    android:paddingBottom="8dp"
                    android:fontFamily="monospace"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addRunForTeamA"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/extra"
                    android:textSize="22sp"
                    android:paddingBottom="8dp"
                    android:fontFamily="monospace"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addExtraForTeamA"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#616161"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wicket"
                    android:textSize="22sp"
                    android:paddingTop="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="wicketTeamA"/>

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#616161"
                android:layout_marginTop="16dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/team_b"
                    android:textAllCaps="true"
                    android:textSize="24sp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textColor="#349637"
                    android:layout_marginTop="16dp"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/score_b_team"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/score_b"
                        android:fontFamily="cursive"
                        android:textSize="44sp"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dash"
                        android:fontFamily="cursive"
                        android:textSize="44sp"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/wicket_b_team"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wicket_b"
                        android:fontFamily="cursive"
                        android:textSize="44sp"
                        android:textColor="@android:color/black"/>

                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/six"
                    android:textSize="22sp"
                    android:paddingBottom="8dp"
                    android:fontFamily="monospace"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addSixForTeamB"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/four"
                    android:textSize="22sp"
                    android:paddingBottom="8dp"
                    android:fontFamily="monospace"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addFourForTeamB"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/run"
                    android:textSize="22sp"
                    android:paddingBottom="8dp"
                    android:fontFamily="monospace"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addRunForTeamB"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/extra"
                    android:textSize="22sp"
                    android:paddingBottom="8dp"
                    android:fontFamily="monospace"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="addExtraForTeamB"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#616161"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wicket"
                    android:textSize="22sp"
                    android:paddingTop="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="wicketTeamB"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cricketButtonPanel"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/decision"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/decision"
                android:textSize="40sp"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:textColor="#ff0000"
                android:gravity="right"/>

            <TextView
                android:id="@+id/winner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:textSize="40sp"
                android:textColor="#ff0008"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:fontFamily="sans-serif"
            android:text="@string/reset"
            android:textSize="22sp"
            android:onClick="reset"/>

    </RelativeLayout>
</ScrollView>
